[package]
name = "aes_crypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bitvec = "1.0.1" 
hex = "0.4.3" 

[profile.test]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
